<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ModifyPasswordActivity">

    <ScrollView
        android:id="@+id/modify_password_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/modify_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
           <!-- current phone number-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curr_phone_number"
                />
                <TextView
                    android:id="@+id/curr_login_phone_number_md"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="***"
                    />
            </LinearLayout>
            <!-- new password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >
                <EditText
                    android:id="@+id/new_password_md"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pls_input_new_password"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <!-- request smscode -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/md_pwd_sms_code_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sms_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/request_md_pwd_sms_code_button"
                    />
                <Button
                    android:id="@+id/request_md_pwd_sms_code_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/request_sms_code"
                    android:layout_alignParentRight="true"
                    android:textSize="12dp"
                    />
            </RelativeLayout>
            <!-- submit button -->
            <Button
                android:id="@+id/md_pwd_verify_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>