<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReplacePhoneNumberActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:id="@+id/replace_pnum_curr_phone_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curr_login_phone_number"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />
         <TextView
                android:id="@+id/replace_pnum_curr_num_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18813048110"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/replace_pnum_new_phonenumber_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/replace_pnum_curr_phone_info_layout"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:hint="@string/new_phone_number"
            android:inputType="number"
            android:singleLine="true"
            />
        <RelativeLayout
            android:id="@+id/replace_pnum_sms_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignLeft="@+id/replace_pnum_curr_phone_info_layout"
            android:layout_below="@+id/replace_pnum_new_phonenumber_view"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            >
<!--            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_code"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentLeft="true"
                android-->
                />

             <EditText
                 android:id="@+id/replace_pnum_sms_code_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/replace_pnum_request_smscode_button"
                 android:singleLine="true"
                 />
            <Button
                android:id="@+id/replace_pnum_request_smscode_button"
                android:text="@string/request_sms_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    </RelativeLayout>

    <Button android:id="@+id/replace_pnum_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        />

</LinearLayout>